# iadpython

./: .gitignore  .pre-commit-config.yaml  .testignore  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  MANIFEST.in  Makefile  README.md  README.rst  jupyter_lite_config.json  pyproject.toml  release.txt  requirements-dev.txt  setup.cfg  setup.py  todo.txt
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml  test.yml
doc/: Adding-Doubling-Basics.ipynb  IAD-with-spheres.ipynb
docs/: 1sphere-basics.ipynb  1sphere-examples.ipynb  1sphere-gain-derivation.ipynb  1sphere-gain-graphs.ipynb  1sphere-gain-testing.ipynb  1sphere-measurements.ipynb  1sphere-random-points.ipynb  2sphere-gain-derivation.ipynb  2sphere-gain-testing.ipynb  Adding-Doubling-Basics.ipynb  IAD-with-spheres.ipynb  ad-basics.ipynb  ad-quadrature.ipynb  ad-redistribution.ipynb  ad-sample.ipynb  ad-thin.ipynb  adaptive_grid.ipynb  adding-doubling-redistribution.ipynb  adding-doubling-thin.ipynb  conf.py  iad-with-spheres.ipynb  iadpython.rst  impossible.ipynb  index.rst  low-absorbing-samples.ipynb  mcsphere_random.ipynb  measurements.ipynb  nist.ipynb  no-sphere-calc.ipynb  performance.ipynb  quadrature-examples.ipynb  quadrature_examples.ipynb  redistribution.ipynb  requirements.txt  sample.ipynb  show-grid.ipynb  sphere-basics.ipynb  sphere-double.ipynb  sphere-gain-testing.ipynb  sphere-gain.ipynb  (+6 more)
iadpython/: __init__.py  _version.py  ad.py  agrid.py  boundary.py  cache.py  calc.py  combine.py  constants.py  double.py  fresnel.py  grid.py  iad.py  iad_util.py  iadc.py  iadcommand.py  iadplus  iadplus_entry.py  iadpython.py  iadsum  iadsum_entry.py  layer.py  mc_lost.py  mc_sphere.py  nist.py  perf_test.py  phase.py  port.py  quadrature.py  redistribution.py  rxt.py  sphere.py  start.py  test_boundary.py  test_combo.py  test_fresnel.py  test_iadpython.py  test_layer.py  test_phase.py  test_quadrature.py  (+5 more)
iadpython/data/: M38597.csv
tests/: .testignore  bench_grid.py  bench_mc_simplex.py  conftest.py  test_agrid.py  test_all_notebooks.py  test_bli_mc_regression.py  test_bli_mc_sweep.py  test_bli_nomc.py  test_boundary.py  test_combo.py  test_double.py  test_fresnel.py  test_grid.py  test_iad.py  test_iadc.py  test_iadc_single_sphere_parity.py  test_iadc_two_sphere_parity.py  test_iadcommand.py  test_iadplus.py  test_layer.py  test_layers.py  test_mc_hot_start.py  test_mc_iteration_convergence.py  test_mc_lost.py  test_nist.py  test_one_sphere.py  test_performance.py  test_port.py  test_quadrature.py  test_redistribution.py  test_roundtrip_0_spheres.py  test_roundtrip_1_sphere.py  test_roundtrip_1_sphere_mc_lost.py  test_roundtrip_2_spheres.py  test_roundtrip_2_spheres_mc_lost.py  test_rt_inverse_roundtrip_one_sphere.py  test_rxt.py  test_rxt2.py  test_sphere.py  (+4 more)
tests/data/: basic-A.rxt  basic-A.txt  basic-B.txt  basic-C.txt  basic-D.txt  basic-E.txt  sample-A.txt  sample-B.txt  sample-C.txt  sample-D.txt  sample-E.txt  sample-F.txt  sample-G.txt
tests_iadc/: test_iadc.py  test_mc_lost_agreement.py  test_performance.py
