[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150
exclude =['.git', '__pycache__', 'docs']

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D212", "F403"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` Module level import not at top of file
"tests/test_iadcommand.py" = ["E402"]

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "docs/*",
    "Makefile",
    "release.txt",
    "requirements.txt",
    "requirements-dev.txt",
    "todo",
]

[tool.pytest.ini_options]
markers = ["notebooks"]

[tool.pylint]
disable = [
    "invalid-name",
    "line-too-long",
    "too-many-locals",
    "too-many-arguments",
    "consider-using-f-string",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-branches",
    "too-few-public-methods",
  ]
