[bdist_wheel]
universal=1

[metadata]
name = iadpython

version=0.3.0
author='Scott Prahl'
author_email=scott.prahl@oit.edu
license=MIT
description='Forward and inverse radiative transport using adding-doubling'
keywords=
    absorption
    scattering
    reflection
    transmission
    optical properties
    radiative transport
    optical properties
    scattering coefficient
    scattering anisotropy
    
url=https://github.com/scottprahl/iadpython.git

classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = iadpython
zip_safe = false
install_requires = 
    numpy

test_suite='iadpython/test_iadpython.py'

[flake8]
ignore = W503, D212
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
    tests/test_jit.py:D100,D101,D102
    tests/test_nojit.py:D100,D101,D102
    tests/conftest.py:D100,D101,D102,D103
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
