[metadata]
description='Forward and inverse radiative transport using adding-doubling'

keywords=
    absorption
    scattering
    reflection
    transmission
    optical properties
    radiative transport
    optical properties
    scattering coefficient
    scattering anisotropy

classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

include_package_data = True
package_data = {'' : ['data/*.csv']}


[options]
packages = iadpython
install_requires = 
    numpy

python_requires = >=3.7
zip_safe = True

[tool:pytest]
norecursedirs = tests_iadc

[flake8]
ignore = W503, D212, D301, N802, N803, N806, E501
per-file-ignores = 
    __init__.py: F401, F403
    setup.py: D100
    tests/test_iadcommand.py: E402
exclude =
    .git,
    __pycache__,
    docs,
    iadpython/.ipynb_checkpoints
max-line-length = 99
docstring-convention = google
